[feat] 원문 미리보기 제한 접근 구현
